update style files

--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,33 @@
       <p>
       </p>    </div>
   </div>
+  <br>
+ <div class="but">
+    <button class="btn btn-outline-warning "><a style="text-decoration: none;" target="_blank" href="https://www.github.com/1omerozturk">Go To Projects </a>
+    </button>
+    </div>
+</section>
 
+
+<br>
+<section>
+  <h1>My Some Certificates</h1>
+<div class="card2">
+  <div class="image-box">
+    <img src="./images/slide/first.png" alt="İmages not loaded"/>
+  </div>
+    <div class="content2">
+      <h2></h2>
+      <p>
+      </p>    </div>
+  </div>
+  <br>
+  <div class="but">
+    <button class="btn btn-outline-warning ">
+      <a style="text-decoration: none;" target="_blank"
+       href="https://www.github.com/1omerozturk">Go To LinkedIn </a>
+    </button>
+    </div>
 
 </section>
 
