updated a link src

--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
   <div class="but">
     <button class="btn btn-outline-warning ">
       <a style="text-decoration: none;" target="_blank"
-       href="https://www.github.com/1omerozturk">Go To LinkedIn </a>
+       href="https://www.linkedin.com/in/1omerozturk/">Go To LinkedIn </a>
     </button>
     </div>
 
