update css files

--- a/projects.html
+++ b/projects.html
@@ -12,11 +12,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords"content="ÖmerÖztürk Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
-    <title>Concat</title>
+    <title>Projects and Certificates</title>
+    <link rel="icon" href="./images/bg.png" />
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-info p-2">
+   
+      <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
         <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><em> <span class="last-name">PROJECTS AND CERTIFICATES</span></em>
@@ -33,8 +34,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto">
+        <div class="collapse navbar-collapse ml-auto" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link mx-2 active" aria-current="page" href="./index.html"
                 >Home</a
@@ -52,7 +53,7 @@
                 Personal
               </a>
               <ul
-              class="dropdown-menu dropdown-menu-dark"
+              class="dropdown-menu dropdown-menu-light"
               aria-labelledby="navbarDropdownMenuLink"
             >
               <li><a class="dropdown-item" href="./index.html">Blog</a></li>
@@ -65,6 +66,7 @@
         </div>
       </div>
     </nav>
+    <header>
   </header>
     
 <section>
@@ -80,7 +82,7 @@
   </div>
   <br>
  <div class="but">
-    <button class="btn btn-outline-warning "><a style="text-decoration: none;" target="_blank" href="https://www.github.com/1omerozturk">Go To Projects </a>
+    <button class="btn btn-outline-warning btn1"><a style="text-decoration: none;" target="_blank" href="https://www.github.com/1omerozturk">Go To Projects </a>
     </button>
     </div>
 </section>
@@ -100,7 +102,7 @@
   </div>
   <br>
   <div class="but">
-    <button class="btn btn-outline-warning ">
+    <button class="btn btn-outline-warning btn1">
       <a style="text-decoration: none;" target="_blank"
        href="https://www.linkedin.com/in/1omerozturk/">Go To LinkedIn </a>
     </button>
