--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header">
-    <nav class="navbar navbar-expand-rg navbar-dark p-2">
+    <nav class="navbar navbar-expand-lg navbar-light p-2">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <div class="home-img">
@@ -42,7 +42,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link mx-2 active" aria-current="page" href="./index.html"
                 >Home</a
@@ -62,10 +62,10 @@
                 Personal
             </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-light"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li><a class="dropdown-item" href="./index.html">Blog</a></li>
+                <li><a class="dropdown-item " href="./index.html">Blog</a></li>
                 <li><a class="dropdown-item" href="./aboutme.html">About me</a></li>
                 <li><a class="dropdown-item" href="./contact.html">Contact me</a></li>
               </ul>
