--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
 
-    <a href="./images/Cv.pdf" target="_blank" class=" btn btn-outline-warning text-muted my-auto butt">
+    <a href="./images/Cvv.pdf" target="_blank" class=" btn btn-outline-warning text-muted my-auto butt">
         <p>Download CV</p></a>
       </section> 
       
