update some things

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords"content="ÖmerÖztürk Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
+    <meta name="keywords"content="ÖmerÖztürk van Van VAN @0mer.0zturk @1omerozturk ö m e r ö z t ü r k Ö M E R Ö Z T Ü R K YAZILIM SOFTWARE yazılım yazilim software
+     Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
     <title>Projects and Certificates</title>
     <link rel="icon" href="./images/bg.png" />
   </head>
