--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <meta name="keywords"content="ÖmerÖztürk van Van VAN @0mer.0zturk @1omerozturk ö m e r ö z t ü r k Ö M E R Ö Z T Ü R K YAZILIM SOFTWARE yazılım yazilim software
+    Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
