--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<html class="no-touch" lang="tr" prefix="og: http://ogp.me/ns#">
+ 
   <head>
+    <meta charset="UTF-8" />
+    <title>Ömer Öztürk İnfo</title>
     <link rel="stylesheet" href="./styleprojects.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -8,12 +10,16 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <meta charset="UTF-8" />
+    <meta name="keywords"content="ÖmerÖztürk van Van VAN @0mer.0zturk @1omerozturk ö m e r ö z t ü r k Ö M E R Ö Z T Ü R K YAZILIM SOFTWARE yazılım yazilim software
+    Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Ömer Öztürk">
+    <meta name="description" content="Ömer Öztürk Yazılım Software">
     <meta name="keywords"content="ÖmerÖztürk van Van VAN @0mer.0zturk @1omerozturk ö m e r ö z t ü r k Ö M E R Ö Z T Ü R K YAZILIM SOFTWARE yazılım yazilim software
      Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
-    <title>Projects and Certificates</title>
     <link rel="icon" href="./images/bg.png" />
   </head>
   <body>
