--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<html class="no-touch" lang="tr" prefix="og: http://ogp.me/ns#">
   <head>
+    <meta charset="UTF-8" />
+    <title>Ömer Öztürk Contact</title>
     <link rel="stylesheet" href="./style.css" />
 
     <link
@@ -11,10 +12,15 @@
     />
     <meta name="keywords"content="ÖmerÖztürk van Van VAN @0mer.0zturk @1omerozturk ö m e r ö z t ü r k Ö M E R Ö Z T Ü R K YAZILIM SOFTWARE yazılım yazilim software
     Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
-    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Concat</title>
+    
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Ömer Öztürk">
+    <meta name="description" content="Ömer Öztürk Yazılım Software">
+    <meta name="keywords"content="ÖmerÖztürk van Van VAN @0mer.0zturk @1omerozturk ö m e r ö z t ü r k Ö M E R Ö Z T Ü R K YAZILIM SOFTWARE yazılım yazilim software
+    Ömer Öztürk blog website kişisel blog omer ozturk omerozturk ozturkomer personalweb webpage" />
+   
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-info p-2">
