update personal informations

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <a class="nav-link" href="#experience">Deneyimlerim</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">İletişim</a>
+                <a class="nav-link" href="#contactPhone">İletişim</a>
               </li>
             </ul>
           </div>
@@ -735,7 +735,7 @@
               </div>
               <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
                 <div class="mt-3 px-1">
-                  <div class="h5">Bana ulaşmak için, İletişim Kanallarım: ⬇️</div>
+                  <div class="h5" id="contactPhone">Bana ulaşmak için, İletişim Kanallarım: ⬇️</div>
                   
                   <p>
                     İş birliktelikleri ve sorularınız için sol taraftaki alndan bana ulaşabilirsiniz.
@@ -745,16 +745,16 @@
                 <div class="mt-53 px-1">
                   <div class="row">
                     <div class="col-sm-2">
-                      <div class="pb-1">Email:</div>
+                      <div class="pb-1">Mail:</div>
                     </div>
                     <div class="col-sm-10">
                       <div id="mailsend" class="pb-1 fw-bolder cursor-pointer">omer.ozturk.or.ok@gmail.com</div>
                     </div>
                     <div class="col-sm-2">
-                      <div class="pb-1">Phone:</div>
+                      <div class="pb-1">Telefon:</div>
                     </div>
                     <div class="col-sm-10">
-                      <div class="pb-1 fw-bolder">+90 541 801 4815</div>
+                      <div class="pb-1 fw-bolder">05011551065</div>
                     </div>
                   </div>
                 </div>
