--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <div class="pb-1">Telefon:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">+90 541 801 4815</div>
+                    <div class="pb-1 fw-bolder">05011551065</div>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Address:</div>
