--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="col-lg-6 p-2">
                   <img
                     class="img-fluid"
-                    src="images/portfolio/2.jpg"
+                    src="./images/0mer.0zturk.png"
                     alt="hello"
                   />
                 </div>
@@ -193,7 +193,7 @@
                       <div class="mt-3">
                         <a
                         class="btn btn-outline-secondary shadow-sm mt-1 hover-effect"
-                        href="./images/Cvv.pdf"
+                        href="./images/CV_last.pdf"
                         target="_blank"
                         >CV İndir <i class="fas fa-download"></i
                           ></a>
@@ -230,13 +230,13 @@
                     <div class="pb-1">Mail:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">omer.ozturk.or.ok@gmail.com</div>
+                    <a href="mailto:omer.ozturk.or.ok@gmail.com" class="pb-1 fw-bolder">omer.ozturk.or.ok@gmail.com</a>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Telefon:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">05011551065</div>
+                    <a href="tel:05011551065" class="pb-1 fw-bolder">05011551065</a>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Address:</div>
@@ -543,12 +543,12 @@
                 <a href="https://www.youtube.com/watch?v=kkwnOCuCOPU">
                   <figure class="portfolio-item">
                     <img
-                    src="https://camo.githubusercontent.com/2878219013444a56adb435d784a6f7d6e02d656cd4f184f8019476dd03cabfb1/68747470733a2f2f692e68697a6c69726573696d2e636f6d2f313533387639372e6a7067"
+                    src="./images/ss.png"
                       height="300"
-                       data-bp="https://github.com/1omerozturk/React_Redux_Northwind/blob/main/images/img.png?raw=true"
+                       data-bp="./images/ss.png"
                     />
                     <figcaption>
-                      <h4 class="h5 mb-0">Full Stack Development</h4>
+                      <h4 class="h5 mb-0">MERN(Mongo-Express-React-NodeJS) Stack Development</h4>
                       <div>React</div>
                     </figcaption>
                   </figure>
@@ -748,13 +748,13 @@
                       <div class="pb-1">Mail:</div>
                     </div>
                     <div class="col-sm-10">
-                      <div id="mailsend" class="pb-1 fw-bolder cursor-pointer">omer.ozturk.or.ok@gmail.com</div>
+                     <a href="mailto:omer.ozturk.or.ok@gmail.com" id="mailsend" class="pb-1 fw-bolder cursor-pointer">omer.ozturk.or.ok@gmail.com</a>
                     </div>
                     <div class="col-sm-2">
                       <div class="pb-1">Telefon:</div>
                     </div>
                     <div class="col-sm-10">
-                      <div class="pb-1 fw-bolder">05011551065</div>
+                      <a href="tel:05011551065" class="pb-1 fw-bolder">05011551065</a>
                     </div>
                   </div>
                 </div>
@@ -769,7 +769,7 @@
               <p>
                 <b>
 
-                 Full Stack Web Developer</b> & Jr. AI - Data Sciener
+                  Jr. Backnd Developer </b> & AI - Data Sciener
                 </p>
               <div class="social-nav">
                 <nav role="navigation">
