update some things

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         role="navigation"
       >
         <div class="container">
+          <div class="avatar px-2">
+            <img
+              class="img-fluid rounded-circle"
+              src="images/avatar.jpg"
+              height="50"
+              width="50"
+            />
+          </div>
           <a class="link-dark navbar-brand site-title mb-0" href="#"
             >Ömer Öztürk</a
           >
@@ -627,6 +635,7 @@
               <h2 class="marker marker-center">Sertifikalarım</h2>
             </div>
             <div
+            style="transition-duration: 0ms;transform: translate3d(0px, 0px, 0px);transition-property: transform;"
               class="grid bp-gallery pb-5"
               data-aos="zoom-in-up"
               data-aos-delay="100"
@@ -954,7 +963,7 @@
         </div>
        
         <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
-          <div class="container-narrow">
+          <div class="container-narrow">e
             <div class="text-center mb-5">
               <h2 class="marker marker-center">Bana Ulaşın</h2>
             </div>
