update experience and do little editing

--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                           </div>
                         </div>
                         <img
-                          src="images/services/full-stack.svg"
+                          src="images/services/app-development.svg"
                           width="60"
                           height="60"
                           alt="full stack"
@@ -1004,8 +1004,13 @@
                   </div>
                   <div class="card-body px-3 py-2">
                     <p>
-                      Staj sürecinde öğrendiğim ve kullanıdığım yeni teknolojileri kullanarak bir (MERN) MongoDB-ExpressJS-ReactJS-NodeJS projesi geliştirdim.
-                      Projeme ek olarak bir NFT - Kripto cüzdanı (metamask) ile bağlanarak giriş yapılması ve upload edilen NFT'leri kendi profili kısmında görme ve açık olarak herkes tarafından incelenmesi, tüm bunlara ek olarak kullancıların kontrolünü, detaylı işlerini sağlamaya yardımcı olması için admin paneli ekledim.
+                      Staj sürecinde öğrendiğim ve kullanıdığım yeni teknolojileri kullanarak bir <i> <b>
+                        (MERN) MongoDB-ExpressJS-ReactJS-NodeJS
+                      </b> </i>
+                       projesi geliştirdim.
+                      Projeme ek olarak bir <u>
+                        NFT - Kripto cüzdanı (metamask)</u>
+                       ile bağlanarak giriş yapılması ve upload edilen <b>NFT</b>'leri kendi profili kısmında görme ve açık olarak herkes tarafından incelenmesi, tüm bunlara ek olarak kullancıların kontrolünü, detaylı işlerini sağlamaya yardımcı olması için admin paneli ekledim.
 
                     </p>
                     <i>Projeyi incelemek isterseniz: </i>
