Update CV and Photos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="avatar px-2">
             <img
               class="img-fluid rounded-circle"
-              src="images/avatar.jpg"
+              src="images/00.jpg"
               height="50"
               width="50"
             />
@@ -217,14 +217,32 @@
                         >Bana Ulaşın <i class="fas fa-arrow-right"></i
                       ></a>
                       
-                      <div class="mt-3">
-                        <a
-                        class="btn btn-outline-secondary shadow-sm mt-1 hover-effect"
-                        href="./images/CV_last.pdf"
-                        target="_blank"
-                        >CV İndir <i class="fas fa-download"></i
-                          ></a>
-                        </div>
+                      <div class="row mt-3">
+
+                        <div class="col-md-6">
+                          <div class="mt-1">
+                            <a
+                            class="btn btn-outline-dark shadow-sm mt-1 hover-effect"
+                            href="./images/CV_last.pdf"
+                            target="_blank"
+                            >CV İndir /EN <i class="fas fa-download"></i
+                              ></a>
+                            </div>
+                      </div>
+                        <div class="col-md-6">
+                          <div class="mt-1">
+                            <a
+                            class="btn btn-outline-dark shadow-sm mt-1 hover-effect"
+                            href="./images/cv_tr.pdf"
+                            target="_blank"
+                            >CV İndir /TR <i class="fas fa-download"></i
+                              ></a>
+                            </div>
+                      </div>
+
+                      </div>
+
+                     
                       </div>
                   </div>
                 </div>
