--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                           <div class="mt-1">
                             <a
                             class="btn btn-outline-dark shadow-sm mt-1 hover-effect"
-                            href="./images/CV_last.pdf"
+                            href="./images/Omer_Ozturk_en.pdf"
                             target="_blank"
                             >CV İndir /EN <i class="fas fa-download"></i
                               ></a>
@@ -233,7 +233,7 @@
                           <div class="mt-1">
                             <a
                             class="btn btn-outline-dark shadow-sm mt-1 hover-effect"
-                            href="./images/cv_tr.pdf"
+                            href="./images/Omer_Ozturk_tr.pdf"
                             target="_blank"
                             >CV İndir /TR <i class="fas fa-download"></i
                               ></a>
