update content writing

--- a/idp2/Görüntü İşleme (Image Processing)-2 d2c841b3a8ca4de4962a2350732ba9f6.html
+++ b/idp2/Görüntü İşleme (Image Processing)-2 d2c841b3a8ca4de4962a2350732ba9f6.html
@@ -547,6 +547,9 @@ blockquote {
 	color: rgba(212, 76, 71, 1);
 	fill: rgba(212, 76, 71, 1);
 }
+.highlight-default_background {
+	color: rgba(55, 53, 47, 1);
+}
 .highlight-gray_background {
 	background: rgba(241, 241, 239, 1);
 }
@@ -557,7 +560,7 @@ blockquote {
 	background: rgba(251, 236, 221, 1);
 }
 .highlight-yellow_background {
-	background: rgba(251, 243, 219, 1);
+	background: rgba(251, 237, 214, 1);
 }
 .highlight-teal_background {
 	background: rgba(237, 243, 236, 1);
@@ -614,6 +617,10 @@ blockquote {
 	color: rgba(212, 76, 71, 1);
 	fill: rgba(212, 76, 71, 1);
 }
+.block-color-default_background {
+	color: inherit;
+	fill: inherit;
+}
 .block-color-gray_background {
 	background: rgba(241, 241, 239, 1);
 }
@@ -624,7 +631,7 @@ blockquote {
 	background: rgba(251, 236, 221, 1);
 }
 .block-color-yellow_background {
-	background: rgba(251, 243, 219, 1);
+	background: rgba(251, 237, 214, 1);
 }
 .block-color-teal_background {
 	background: rgba(237, 243, 236, 1);
@@ -651,7 +658,7 @@ blockquote {
 .select-value-color-orange { background-color: rgba(250, 222, 201, 1); }
 .select-value-color-brown { background-color: rgba(238, 224, 218, 1); }
 .select-value-color-red { background-color: rgba(255, 226, 221, 1); }
-.select-value-color-yellow { background-color: rgba(253, 236, 200, 1); }
+.select-value-color-yellow { background-color: rgba(249, 228, 188, 1); }
 .select-value-color-blue { background-color: rgba(211, 229, 239, 1); }
 .select-value-color-pageGlass { background-color: undefined; }
 .select-value-color-washGlass { background-color: undefined; }
