--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,76 @@
             </div>
           </div>
         </div>
-       
+
+        <!-- Blogs -->
+
+        <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5">
+          <div class="row">
+            <div class="text-center mb-5">
+              <h2 class="marker marker-center">İçerik Yazılarım</h2>
+            </div>
+            <div class="col-md-6">
+              <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+                <div class="card-header px-3 py-2">
+                    <div class="d-flex justify-content-between text-center" id="blogcontent">
+                      <iframe scrolling="no" src="./dphtml/Design Patterns 500c060e26924d6380d9c84b9de845e4.html" frameborder="0"></iframe>
+                    </div>
+                    <div class="text-center">
+
+                      <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/Design-Patterns-500c060e26924d6380d9c84b9de845e4?pvs=4">Devamı...</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+              <div class="card-header px-3 py-2">
+                  <div class="d-flex justify-content-between text-center" id="blogcontent">
+                    <iframe scrolling="no" src="./sld/SOLID c30367edd6dd46d68f415d1caf8aeb5d.html" frameborder="0"></iframe>
+                  </div>
+                  <div class="text-center">
+
+                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/SOLID-c30367edd6dd46d68f415d1caf8aeb5d?pvs=4">Devamı...</a>
+                  </div>
+              </div>
+          </div>
+        </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+              <div class="card-header px-3 py-2">
+                  <div class="d-flex justify-content-between text-center" id="blogcontent">
+                    <iframe scrolling="no" src="./idp1/Image and Data Processing d34f64dbdc654e4dbbc019d6cfe70f71.html" frameborder="0"></iframe>
+                  </div>
+                  <div class="text-center ">
+
+                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/Image-and-Data-Processing-d34f64dbdc654e4dbbc019d6cfe70f71?pvs=4">Devamı...</a>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+            <div class="card-header px-3 py-2">
+                <div class="d-flex justify-content-center text-center" id="blogcontent">
+                  <iframe scrolling="no" style="overflow: none;" src="./idp2/Görüntü İşleme (Image Processing)-2 d2c841b3a8ca4de4962a2350732ba9f6.html" frameborder="0"></iframe>
+                </div>
+                <div class="text-center">
+                  <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/G-r-nt-leme-Image-Processing-2-d2c841b3a8ca4de4962a2350732ba9f6?pvs=4">Devamı...</a>
+                </div>
+            </div>
+        </div>
+      </div>
+      </div>
+        </div>
+
+
+
+
         <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
           <div class="container-narrow">
             <div class="text-center mb-5">
