update home page

--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
                     </div>
                     <div class="text-center">
 
-                      <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/Design-Patterns-500c060e26924d6380d9c84b9de845e4?pvs=4">Devamı...</a>
+                      <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/Design-Patterns-500c060e26924d6380d9c84b9de845e4?pvs=4">Devamı...</a>
                     </div>
                 </div>
             </div>
@@ -1084,7 +1084,7 @@
                   </div>
                   <div class="text-center">
 
-                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/SOLID-c30367edd6dd46d68f415d1caf8aeb5d?pvs=4">Devamı...</a>
+                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/SOLID-c30367edd6dd46d68f415d1caf8aeb5d?pvs=4">Devamı...</a>
                   </div>
               </div>
           </div>
@@ -1100,7 +1100,7 @@
                   </div>
                   <div class="text-center ">
 
-                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/Image-and-Data-Processing-d34f64dbdc654e4dbbc019d6cfe70f71?pvs=4">Devamı...</a>
+                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/Image-and-Data-Processing-d34f64dbdc654e4dbbc019d6cfe70f71?pvs=4">Devamı...</a>
                   </div>
               </div>
           </div>
@@ -1113,7 +1113,7 @@
                   <iframe scrolling="no" style="overflow: none;" src="./idp2/Görüntü İşleme (Image Processing)-2 d2c841b3a8ca4de4962a2350732ba9f6.html" frameborder="0"></iframe>
                 </div>
                 <div class="text-center">
-                  <a class="text-warning btn btn-md mt-2 btn-outline-dark" href="https://purring-comma-24b.notion.site/G-r-nt-leme-Image-Processing-2-d2c841b3a8ca4de4962a2350732ba9f6?pvs=4">Devamı...</a>
+                  <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/G-r-nt-leme-Image-Processing-2-d2c841b3a8ca4de4962a2350732ba9f6?pvs=4">Devamı...</a>
                 </div>
             </div>
         </div>
