Added new content

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                 <a class="nav-link" href="#experience">Deneyimlerim</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#mycontents">İçeriklerim</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#contact">İletişim</a>
               </li>
             </ul>
@@ -1057,13 +1060,13 @@
 
         <!-- Blogs -->
 
-        <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5">
+        <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="mycontents">
           <div class="row">
             <div class="text-center mb-5">
               <h2 class="marker marker-center">İçerik Yazılarım</h2>
             </div>
-            <div class="col-md-6">
-              <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+            <div class="col-md-12">
+              <div class="card mb-3" data-aos="fade-up" data-aos-delay="600">
                 <div class="card-header px-3 py-2">
                     <div class="d-flex justify-content-between text-center" id="blogcontent">
                       <iframe scrolling="no" src="./dphtml/Design Patterns 500c060e26924d6380d9c84b9de845e4.html" frameborder="0"></iframe>
@@ -1075,16 +1078,46 @@
                 </div>
             </div>
           </div>
+          </div>
 
-          <div class="col-md-6">
-            <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+          <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-3" data-aos="fade-right" data-aos-delay="600">
               <div class="card-header px-3 py-2">
                   <div class="d-flex justify-content-between text-center" id="blogcontent">
-                    <iframe scrolling="no" src="./sld/SOLID c30367edd6dd46d68f415d1caf8aeb5d.html" frameborder="0"></iframe>
+                    <iframe scrolling="no" src="./Docker-1_html/Docker - 1 ``Docker Nedir Docker’a Giriş ve Temel 1194463f3348803abcedee5687dd6b3a.html" frameborder="0"></iframe>
                   </div>
                   <div class="text-center">
 
-                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/SOLID-c30367edd6dd46d68f415d1caf8aeb5d?pvs=4">Devamı...</a>
+                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/Docker-1-Docker-Nedir-Docker-a-Giri-ve-Temel-Kavramlar-1194463f3348803abcedee5687dd6b3a?pvs=4">Devamı...</a>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="col-md-4">
+            <div class="card mb-3" data-aos="fade-down" data-aos-delay="600">
+              <div class="card-header px-3 py-2">
+                  <div class="d-flex justify-content-between text-center" id="blogcontent">
+                    <iframe scrolling="no" src="./Docker-2_html/Docker - 2 ``Docker Image ve Container'ları Anlama 11d4463f334880ed9795cd8e79c28d6e.html" frameborder="0"></iframe>
+                  </div>
+                  <div class="text-center">
+
+                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/Docker-2-Docker-Image-ve-Container-lar-Anlamak-11d4463f334880ed9795cd8e79c28d6e?pvs=4">Devamı...</a>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="col-md-4">
+            <div class="card mb-3" data-aos="fade-left" data-aos-delay="600">
+              <div class="card-header px-3 py-2">
+                  <div class="d-flex justify-content-between text-center" id="blogcontent">
+                    <iframe scrolling="no" src="./Docker-3_html/Docker - 3 ``Docker Compose İle Çoklu Container  1234463f334880f88ee8cc037f3d2d6f.html" frameborder="0"></iframe>
+                  </div>
+                  <div class="text-center">
+
+                    <a class="text-warning btn btn-md mt-2 btn-outline-dark" target="_blank" href="https://purring-comma-24b.notion.site/Docker-3-Docker-Compose-le-oklu-Container-Y-netimi-1234463f334880f88ee8cc037f3d2d6f?pvs=4">Devamı...</a>
                   </div>
               </div>
           </div>
@@ -1093,7 +1126,7 @@
 
         <div class="row">
           <div class="col-md-6">
-            <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+            <div class="card mb-3" data-aos="fade-right" data-aos-delay="600">
               <div class="card-header px-3 py-2">
                   <div class="d-flex justify-content-between text-center" id="blogcontent">
                     <iframe scrolling="no" src="./idp1/Image and Data Processing d34f64dbdc654e4dbbc019d6cfe70f71.html" frameborder="0"></iframe>
@@ -1107,7 +1140,7 @@
         </div>
 
         <div class="col-md-6">
-          <div class="card mb-3" data-aos="fade-right" data-aos-delay="400">
+          <div class="card mb-3" data-aos="fade-left" data-aos-delay="600">
             <div class="card-header px-3 py-2">
                 <div class="d-flex justify-content-center text-center" id="blogcontent">
                   <iframe scrolling="no" style="overflow: none;" src="./idp2/Görüntü İşleme (Image Processing)-2 d2c841b3a8ca4de4962a2350732ba9f6.html" frameborder="0"></iframe>
