update some contents

--- a/index.html
+++ b/index.html
@@ -261,18 +261,16 @@
                 <h2 class="h4 my-2">Merhaba👋 Ben Ömer Öztürk</h2>
                 <p>
                   Fırat Üniversitesi Teknoloji Fakültesi 
-                  Yazılım Mühendisliği 4. Sınıf öğrencisiyim,
-                  Full Stack Web Developer olarak kendimi 
-                  geliştiriyorum. Aynı zamanda Yapay Zeka, 
+                  Yazılım Mühendisliği'nden 2024 Temmuz ayında mezun oldum. Full Stack Developer olarak kendimi 
+                  geliştiriyorum. Web alanında .NET, NodeJS, TypeScript ve mobil olarak Kotlin üzerine çalışıyorum.  Aynı zamanda Yapay Zeka, 
                   Görüntü İşleme ve Veri Bilimi ile ilgileniyorum.
-
                 </p>
                 <div class="row mt-3">
                   <div class="col-sm-2">
                     <div class="pb-1">Yaş:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">22</div>
+                    <div class="pb-1 fw-bolder">23</div>
                   </div>
                   <div class="col-sm-2">
                     <div class="pb-1">Mail:</div>
@@ -287,10 +285,10 @@
                     <a href="tel:05011551065" class="pb-1 fw-bolder">05011551065</a>
                   </div>
                   <div class="col-sm-2">
-                    <div class="pb-1">Address:</div>
+                    <div class="pb-1">Konum:</div>
                   </div>
                   <div class="col-sm-10">
-                    <div class="pb-1 fw-bolder">Elazığ, Türkiye</div>
+                    <div class="pb-1 fw-bolder">Van, Türkiye</div>
                   </div>
                 </div>
               </div>
@@ -1201,8 +1199,7 @@
               <div class="h4">Ömer <b>ÖZTÜRK</b></div>
               <p>
                 <b>
-
-                  Jr. Backend Developer </b> & AI - Data Sciener
+                  Jr. Backend Developer </b>  Jr. Fullstack Developer 
                 </p>
               <div class="social-nav">
                 <nav role="navigation">
